--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "slot",
+  "name": "zyh",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve  --open",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "fastclick": "^1.0.6",
+    "mint-ui": "^2.2.13",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
@@ -15,6 +18,7 @@
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "babel-plugin-component": "^1.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
